# beam-rust-python-java

./: README.md  requirements.txt
cffi-lev3/: .gitignore  Cargo.toml  README.md  test_lev.py
cffi-lev3/src/: lib.rs
jna-lev3/: Cargo.toml  README.md  pom.xml
jna-lev3/src/: lib.rs
jna-lev3/src/main/java/rustjna/: Levenshtein.java
lev10/: Cargo.toml
lev10/src/: lib.rs
